# unitGPS

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT.md  HANDOFF.md  README.md  UnitGPS.spec  UnitGPS_onefile.spec  _redirects  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/: README.md
apps/desktop_app/: README.md
apps/htmx_app/: README.md
apps/react_app/: README.md
apps/streamlit_app/: BUILD.md  README.md  __init__.py  _launcher.py  app.py  export.py  filters.py  formatting.py  network_viz.py  run.bat  state.py  themes.py  url_state.py
apps/streamlit_app/renderers/: stepper.py  (+3 more)
data/: Data Library, 2025-10-18, 1960-2023.xlsx  IPCC GWPs AR4-AR6.xlsx
docs/: Abstract.md  CHANGELOG.md  Diagrams.md  FAQ.md  Glossary.md  METHODOLOGY.md  QA_NOTES.md  References.md  Roadmap to world-class.md  Scenarios.md  Tutorial — worked example.md  _MOC.md  architecture.md
docs/Concepts/: Ambiguous paths.md  Audit card hybrid layout.md  Edge picks for ambiguous paths.md  GHG condensed panel.md  GHG emissions and GWP.md  Hero pathway stepper.md  Network visualization.md  Pathway-scoped filters.md  Performance and scaling.md  Portable results.md  Reciprocal edges.md  Shortest paths.md  Temporal scope.md  Unit graph.md
docs/Tests/: Test suite.md
requirements/: core.txt  desktop.txt  dev.txt  react.txt  streamlit.txt
scripts/: README.md  build_exe.bat
src/unitgps/: __init__.py
tests/: conftest.py  test_calculate.py  test_data.py  test_emissions.py  test_graph.py  test_pathfinding.py  test_validation.py
(+61 files in other folders)
