[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitgps"
version = "0.1.0.dev0"
description = "Graph-based universal unit converter and GHG emissions calculator (Claude generation)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Dave Zelinka" }]
dependencies = [
    "pandas>=2.0",
    "networkx>=3.0",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.30", "plotly>=5.18"]
react = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
desktop = ["pywebview>=4.4"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
